test/langtools/tools/javac/datum/SubDatumFieldsMustBeAPrefixOfParentTest.out
SubDatumFieldsMustBeAPrefixOfParentTest.java:9:44: compiler.err.cant.extend.record: (compiler.misc.super.field.mismatch: int, x, int, y)
1 error
